--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,10 +4,10 @@ project:
 
 # Meta
 description-meta: "Website Om"
-author-meta: "Dr. Omveer Singh"
+author-meta: "Dr. Mehulkumar Shiroya"
 
 website:
-  title: "Omveer Singh"
+  title: "Mehulkumar Shiroya"
   image: ""
   description: ""
  
