--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 # Meta
-description-meta: "Website Om"
+description-meta: "Website Mehul"
 author-meta: "Dr. Mehulkumar Shiroya"
 
 website:
@@ -49,7 +49,7 @@ website:
       - text: CV
         href: files/Curriculum_Vitae_OSingh.pdf
       - icon: github
-        href: https://github.com/Om4143
+        href: https://github.com/Mehul0111
         target: _blank
       - text: "{{< fa brands bluesky >}}"
         href: https://bsky.app
@@ -61,11 +61,11 @@ website:
   page-navigation: true
   
   page-footer: 
-    left: "[Om4143](http://www.github.com) &copy; <script>document.write(new Date().getFullYear())</script>" 
+    left: "[Mehul0111](http://www.github.com) &copy; <script>document.write(new Date().getFullYear())</script>" 
     center: ""
     right:  
       - icon: github
-        href: https://github.com/Om4143
+        href: https://github.com/Mehul0111
         target: _blank
       - text: "{{< fa brands bluesky >}}" 
         href: https://bsky.app
